# unverdad

./: .gitignore  .gitmodules  README.md  ggs-mm.py  ggs-mm.sh  pyproject.toml  run.py
ggsmm/: commands.py  config.py  mod_metadata.py
ggsmm/data/: mod_table.py
ggsmm/subcommands/: __init__.py  config.py  import_mods.py  info.py
tests/: __init__.py  __main__.py  manual.py
tests/data/: fixture_database.py
unverdad/: __init__.py  __main__.py  commands.py  config.py  errors.py  run.py  subcommand.py
unverdad/config/: __init__.py  constants.py  schema.py  user_config.py
unverdad/data/: builders.py  database.py  defaults.py  filter_group.py  mod_table.py  schema.py  views.py
unverdad/data/tables/: __init__.py  category.py  game.py  mod.py  mod_category.py  pak.py
unverdad/subcommands/: __init__.py  config.py  import_mods.py  install.py  mod_registry.py  subcommand.py  uninstall.py
