[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "unverdad_USERNAME"
authors = [
    { name="John Tuesday", email="example@example.com" },
]
description = "Mod Manager for Guilty Gear Strive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dynamic = ["version"]
tool.pdm.version = { source="file", path="unverdad/__init__.py" }
tool.pdm.build.package-dir = "unverdad"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

