[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "unverdad_USERNAME"
authors = [
    { name="John Tuesday", email="example@example.com" },
]
description = "Mod Manager for Guilty Gear Strive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source="file", path="unverdad/config/constants.py" }
build.package-dir = "unverdad"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.scripts]
[tool.pdm.scripts.real]
cmd = "python -m unverdad"
env = { UNVERDAD_STAGE = "real" }

[tool.pdm.scripts.tests]
cmd = "python -m tests"
env = { UNVERDAD_STAGE = "test" }
