[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "unverdad_USERNAME"
description = "Mod Manager for Guilty Gear Strive"
authors = [
    { name="John Tuesday", email="example@example.com" },
]
dependencies = [
    "schemaspec @ file:///${PROJECT_ROOT}/schemaspec",
]
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
extraPaths = [ "schemaspec/" ]

[tool.pdm]
version = { source="file", path="unverdad/config/constants.py" }

[tool.pdm.build]
package-dir = "unverdad"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/schemaspec",
]

[tool.pdm.scripts]
real = "python -m unverdad"
tests = "python -m tests.manual" 
